Test done - Missing unit tests - healthy issue

--- a/package.json
+++ b/package.json
@@ -20,10 +20,18 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@fortawesome/angular-fontawesome": "^0.3.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.15",
+    "@fortawesome/free-solid-svg-icons": "^5.7.2",
+    "@types/sinon": "^7.0.6",
+    "@types/underscore": "^1.8.9",
     "bootstrap": "^4.3.0",
     "core-js": "^2.5.4",
+    "moment": "^2.24.0",
     "ngx-bootstrap": "^3.2.0",
     "rxjs": "~6.3.3",
+    "sinon": "^7.2.3",
+    "underscore": "^1.9.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -31,9 +39,10 @@
     "@angular/cli": "~7.0.6",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
-    "@types/jasmine": "~2.8.8",
+    "@fortawesome/fontawesome-free": "^5.7.2",
+    "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
